--- a/bower.json
+++ b/bower.json
@@ -1,30 +1,33 @@
 {
-    "name": "ihana",
-    "authors": [
-        "Elena Torro <elenatorro@gmail.com>"
-    ],
-    "description": "ihana Ghost Theme - Simple & Lovely theme",
-    "main": "index.hbs",
-    "keywords": [
-        "ihana",
-        "theme",
-        "ghost",
-        "allineed",
-        "minimalist",
-        "simple",
-        "lovely"
-    ],
-    "license": "MIT",
-    "homepage": "",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "allineed": "^0.1.2",
-        "allineed-sidebar": "^0.1.2"
-    }
+  "name": "ihana",
+  "authors": [
+    "Elena Torro <elenatorro@gmail.com>"
+  ],
+  "description": "ihana Ghost Theme - Simple & Lovely theme",
+  "main": "index.hbs",
+  "keywords": [
+    "ihana",
+    "theme",
+    "ghost",
+    "allineed",
+    "minimalist",
+    "simple",
+    "lovely"
+  ],
+  "license": "MIT",
+  "homepage": "",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "allineed": "^0.1.2",
+    "allineed-sidebar": "^0.1.2"
+  },
+  "devDependencies": {
+    "allineed": "^0.1.2"
+  }
 }
